<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="smg75.hcv.com.telhelp.ActivityPrincipal"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="73dp">


    <ImageView
        android:id="@+id/ivTitulo"
        android:layout_width="296dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/telhelp"
        tools:ignore="ContentDescription"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


    <ImageView
        android:id="@+id/iv_verbos"
        style="@style/imagenes"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:onClick="onClick"
        app:srcCompat="@drawable/i_verbos"
        tools:ignore="ContentDescription,RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/iv_vocabulario"
        android:layout_marginLeft="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/iv_vocabulario"
        style="@style/imagenes"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:onClick="onClick"
        app:srcCompat="@drawable/i_vocabulario"
        tools:ignore="ContentDescription"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.078" />

    <TextView
        android:id="@+id/textView"
        style="@style/st_cajas_texto"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:layout_weight="0.17"
        android:text="@string/txt_vocabulario"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded,TextViewEdits"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_vocabulario"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/iv_vocabulario"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_vocabulario"
        app:layout_constraintHorizontal_bias="0.692" />

    <TextView
        android:id="@+id/textView2"
        style="@style/st_cajas_texto"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal|fill"
        android:inputType="textPersonName"
        android:text="@string/txt_verbos"
        android:textSize="24sp"
        tools:ignore="TextViewEdits"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_verbos"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/iv_verbos"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        style="@style/st_cajas_texto"
        android:layout_width="113dp"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_acciones"
        android:textSize="24sp"
        tools:ignore="TextViewEdits"
        tools:text="@string/txt_acciones"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/iv_acciones"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_acciones"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/iv_preposiciones"
        style="@style/imagenes"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:onClick="onClick"
        app:srcCompat="@drawable/i_preposiciones"
        tools:ignore="ContentDescription"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:layout_constraintLeft_toRightOf="@+id/iv_verbos"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.146" />

    <ImageView
        android:id="@+id/iv_acciones"
        style="@style/imagenes"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:onClick="onClick"
        app:srcCompat="@drawable/i_acciones"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iv_preposiciones"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.497"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.333" />

    <TextView
        android:id="@+id/textView4"
        style="@style/st_cajas_texto"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_preposiciones"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded,TextViewEdits"
        tools:text="@string/txt_preposiciones"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toRightOf="@+id/iv_preposiciones"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_preposiciones"
        app:layout_constraintHorizontal_bias="0.636"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>
